--- a/notebooks/6.0-final-nb.ipynb
+++ b/notebooks/6.0-final-nb.ipynb
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
     "    \n",
     "    #FILTERING\n",
     "    for index, setting in settings.iterrows():\n",
-    "        if setting[\"On\"] == True:\n",
+    "        if setting[\"On\"]:\n",
     "            if setting[\"Level\"] > 0:\n",
     "                song_df = song_df[(song_df[setting[\"Name\"]] >= song_df[setting[\"Name\"]].mean())]\n",
     "            elif setting[\"Level\"] < 0:\n",
@@ -272,7 +272,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('base')",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -286,12 +286,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.7"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "74a37a82a1045f722fa39b5e25843ead82fe26f95a8a3d59b6a29879869666f7"
+    "hash": "cfb140c15d3191db4b2d9dc98bcbec2b3aed68b62589a7057420806222e5144a"
    }
   }
  },
