--- a/notebooks/10.0-algorithm-practice.ipynb
+++ b/notebooks/10.0-algorithm-practice.ipynb
@@ -551,7 +551,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('base')",
+   "display_name": "Python 3.7.11 64-bit ('cse217a')",
    "language": "python",
    "name": "python3"
   },
@@ -565,12 +565,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.7.11"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "74a37a82a1045f722fa39b5e25843ead82fe26f95a8a3d59b6a29879869666f7"
+    "hash": "e27b9380ff38cc7a9bd155aef51d2581199facd5a3adc549696474b8eacd75fb"
    }
   }
  },
