--- a/notebooks/5.0-spotify-song-targeting.ipynb
+++ b/notebooks/5.0-spotify-song-targeting.ipynb
@@ -1169,7 +1169,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.5.6 ('.env': venv)",
+   "display_name": "Python 3.7.11 64-bit ('cse217a')",
    "language": "python",
    "name": "python3"
   },
@@ -1183,12 +1183,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.6"
+   "version": "3.7.11"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "161595a6fb51b254b958196117a8f0bdde888b4af01e26cd34fe632a3aa25dc6"
+    "hash": "e27b9380ff38cc7a9bd155aef51d2581199facd5a3adc549696474b8eacd75fb"
    }
   }
  },
