--- a/notebooks/11.0-knn-attempt.ipynb
+++ b/notebooks/11.0-knn-attempt.ipynb
@@ -85,7 +85,7 @@
     "# TODO: fill it and start visualizng\n",
     "\n",
     "\n",
-    "playlist_df = pd.DataFrame(columns = playlplaylist_features_listist_list)\n",
+    "playlist_df = pd.DataFrame(columns = playlist_features_list)\n",
     "\n",
     "playlist_names = []\n",
     "for i in range(len(data['playlists'])):\n",
