making a py file for you

--- a/notebooks/6.0-final-nb.ipynb
+++ b/notebooks/6.0-final-nb.ipynb
@@ -182,7 +182,7 @@
     "    #FILTERING\n",
     "    for index, setting in settings.iterrows():\n",
     "        if setting[\"On\"]:\n",
-    "                level = setting[\"Level\"]/100 # will be a number ranging from 0 to 1\n",
+    "                level = setting[\"Level\"]/50 \n",
     "                var = song_df[setting[\"Name\"]].var()\n",
     "                song_df = song_df[(song_df[setting[\"Name\"]] >= level*song_df[setting[\"Name\"]].mean()-2*var) & (song_df[setting[\"Name\"]] <= level*song_df[setting[\"Name\"]].mean()+2*var)]\n",
     "    return song_df"
