all working but 1 django fix

--- a/notebooks/6.0-final-nb.ipynb
+++ b/notebooks/6.0-final-nb.ipynb
@@ -3463,6 +3463,43 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reccomendation = 'Based on the songs you provided, here are some playlist title recommendations: \\n1. Dancefloor Bangers \\n2. Electronic Vibrations \\n3. High Energy Mix \\n4. Upbeat and Eclectic \\n5. Dance/Pop Hits \\n6. Electro-Pop Fusion  \\n7. 2021 Dance Mix \\n8. Energetic EDM Journey'\n",
+    "bullet_points = reccomendation.split('\\n\\n')[0].split('\\n')[0:]\n",
+    "playlist_titles = [point[2:] for point in bullet_points]\n",
+    "playlist_titles = playlist_titles[1:]\n",
+    "best_title = playlist_titles[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Dancefloor Bangers \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(best_title)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
