--- a/notebooks/13.3-combining-everything.ipynb
+++ b/notebooks/13.3-combining-everything.ipynb
@@ -14,16 +14,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/victoria/miniconda3/lib/python3.9/site-packages/requests/__init__.py:102: RequestsDependencyWarning: urllib3 (1.26.7) or chardet (5.1.0)/charset_normalizer (2.0.7) doesn't match a supported version!\n",
-      "  warnings.warn(\"urllib3 ({}) or chardet ({})/charset_normalizer ({}) doesn't match a supported \"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import spotipy\n",
     "from spotipy.oauth2 import SpotifyOAuth\n",
@@ -43,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,17 +111,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "def generate_playlist(sp,generes_list,settings_df, goal):\n",
     "    songs = gather_songs(sp,generes_list,settings_df, goal)\n",
     "    input = \"The playlist has the following songs:\"\n",
-    "    for i in range(len(songs)) and i < 20:\n",
+    "    i = 0\n",
+    "    while i < len(songs) and i < 20:\n",
     "        song_name = songs['track_name'][i]\n",
     "        song_artist = songs['artist'][i] # only the first artist\n",
     "        input = input + \"\\n- \" +song_name + \" by \" + song_artist\n",
+    "        i = i + 1\n",
     "    openai.api_key = credentials.api_key\n",
     "    output = openai.ChatCompletion.create(\n",
     "        model=\"gpt-3.5-turbo\",\n",
@@ -138,17 +131,21 @@
     "                {\"role\": \"system\", \"content\": \"You are a playlist reccomendation software. The user will ask for a playlist title given a list of songs in the playlist.\"},\n",
     "                {\"role\": \"user\", \"content\": input},\n",
     "                {\"role\": \"assistant\", \"content\": \"A playlist title should not be longer than 7 words and at minimum 2 words\"},\n",
-    "                {\"role\": \"assistant\", \"content\": \"Give more than 1 suggestion\"}\n",
+    "                {\"role\": \"assistant\", \"content\": \"Give more than 3 suggestions and less than 8\"},\n",
+    "                {\"role\": \"assistant\", \"content\": \"Structure your format in the output. ' here are three suggestions for playlist titles based on the songs you provided:\\n1.Reccomendation\\n2.Reccomendation\\n3.Reccomendation\\n4.Reccomendation\\n5.Reccomendation, and so on'\"}\n",
     "            ]\n",
     "        ) \n",
     "    reccomendation = output['choices'][0]['message']['content']\n",
     "    print(reccomendation)\n",
-    "    bullet_points = reccomendation.split('\\n\\n')[1].split('\\n')[0:]\n",
+    "    #print('reccc',reccomendation)\n",
+    "    bullet_points = reccomendation.split('\\n\\n')[0].split('\\n')[0:]\n",
     "    playlist_titles = [point[2:] for point in bullet_points]\n",
+    "    playlist_titles = playlist_titles[1:]\n",
+    "    print(playlist_titles)\n",
     "    best_title = playlist_titles[0]\n",
     "\n",
     "    username = sp.current_user()['id']\n",
-    "    result = sp.user_playlist_create(username, name=best_title)\n",
+    "    result = sp.user_playlist_create(username, name=best_title, description=\"A personalized discovery playlist created with Creatify\")\n",
     "    playlist_id = result['id']\n",
     "\n",
     "    logger = logging.getLogger('examples.add_tracks_to_playlist')\n",
@@ -164,14 +161,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/pz/lc5f5cgd1m5_ghmjddlz8r600000gn/T/ipykernel_91656/904931709.py:9: DeprecationWarning: You're using 'as_dict = True'.get_access_token will return the token string directly in future versions. Please adjust your code accordingly, or use get_cached_token instead.\n",
+      "/var/folders/pz/lc5f5cgd1m5_ghmjddlz8r600000gn/T/ipykernel_49001/904931709.py:9: DeprecationWarning: You're using 'as_dict = True'.get_access_token will return the token string directly in future versions. Please adjust your code accordingly, or use get_cached_token instead.\n",
       "  token = sp_oauth.get_access_token(code)\n"
      ]
     },
@@ -179,41 +176,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sure, here are some playlist title recommendations based on the list of songs provided:\n",
-      "\n",
-      "1. Island Vibes\n",
-      "2. Dancehall Party\n",
-      "3. Reggae Rhythms\n",
-      "4. Summer Jams\n",
-      "5. Groove & Move \n",
-      "6. Beachy Beats\n",
-      "7. Tropical Tunes\n"
+      "Based on the songs in your playlist, here are a few playlist title suggestions:\n",
+      "1. Dance Pop Hits\n",
+      "2. Alternative Fireworks\n",
+      "3. Retro Electro Vibes\n",
+      "4. Saturday Night Jam\n",
+      "5. Indie Dance Party\n",
+      "6. Variety Mix Tape\n",
+      "7. Electronic Rhythms\n",
+      "8. Poolside Anthems\n",
+      "9. 80s Era Love\n",
+      "10. Electric Pop Soundtrack\n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "DEBUG:spotipy.client:Sending POST to https://api.spotify.com/v1/playlists/59lT07JwofpdzYdZxjbSCL/tracks with Params: {'position': None} Headers: {'Authorization': 'Bearer BQB2-ZmjZh7oxwxP_jUdFQhAJDbUUjg-KYOgVwrbqpfF5-sypIGfNJOoQyPzferiDKRmPinqu1bC4kvmmx2lY4r6U9nJBcsKmziKLtMO2OdKjKnMiO3DbtUZz6ckN9egBX0mHef8p-paG4eStQmA1-G6XsEEVQOttEgIZMeOf9OC7d_kPPUvnnYuwNlyZBdztnhtoM03t8F6pMRMkR2eRvrJM3aA7NsvTENwgcWKkiOCg0Hns7Y-Iux86IQniIdKTxGT44W0yrd-X2A7HOH6r4zaejApY_4tbtef5ed2p7iLkiSLTOb7nLRxNPA', 'Content-Type': 'application/json'} and Body: '[\"spotify:track:7pRgOCy7jg3Knhb6KE4pOh\", \"spotify:track:1cQdh6DuSCT2ZHY5yhNHs9\", \"spotify:track:4fr3rbxvJG3VWKhFGrZbv3\", \"spotify:track:3iUVSvuZ5LDJNztVjsOKiV\", \"spotify:track:6p3tl3bbNHnraakyCAx00F\", \"spotify:track:0v6WAhivOPQ4LRbm6zUY4L\", \"spotify:track:4VbDJMkAX3dWNBdn3KH6Wx\", \"spotify:track:1V2oqGk8DYKaghlS2zP7kH\", \"spotify:track:1q5TODratFNNhMMu4rI0vf\", \"spotify:track:6pIhN2XWqNhc6o1YS6ZHVH\", \"spotify:track:1jqLJBQwo7yBCqYQWukLkq\", \"spotify:track:7g4eAVk1bMixDKVJeSzSbn\", \"spotify:track:24FJd0d0ALZUOWVsUXiGy7\", \"spotify:track:5CBTx3vTTeV6GdrcTpDPLd\", \"spotify:track:1qE0t7DEW4UB2q1GpVZyH3\", \"spotify:track:44aIMABeaxynSkmuijz1Nt\", \"spotify:track:2WL3Sc4LR88QJRcZRRcOjP\", \"spotify:track:0teYsGvXNiQURHrM43p8hJ\", \"spotify:track:0F8zfKx0ysMmMt4pGnxbCg\", \"spotify:track:0Gx7owcvgXeNoWgDDgaHHR\"]' \n",
-      "DEBUG:urllib3.connectionpool:https://api.spotify.com:443 \"POST /v1/playlists/59lT07JwofpdzYdZxjbSCL/tracks HTTP/1.1\" 201 None\n",
-      "DEBUG:spotipy.client:RESULTS: {'snapshot_id': 'MiwwM2ViMWRiYmQ0ZTI3NDQxOTlmNjVjOWNjMGM3MWI4NDdiOGY5YTUy'}\n"
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[11], line 10\u001b[0m\n\u001b[1;32m      8\u001b[0m generes_list \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mindie\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mindie-Pop\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpop\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m      9\u001b[0m sp \u001b[38;5;241m=\u001b[39m get_logged_in()\n\u001b[0;32m---> 10\u001b[0m titles, i \u001b[38;5;241m=\u001b[39m \u001b[43mgenerate_playlist\u001b[49m\u001b[43m(\u001b[49m\u001b[43msp\u001b[49m\u001b[43m,\u001b[49m\u001b[43mgeneres_list\u001b[49m\u001b[43m,\u001b[49m\u001b[43msettings_df\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgoal\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[10], line 22\u001b[0m, in \u001b[0;36mgenerate_playlist\u001b[0;34m(sp, generes_list, settings_df, goal)\u001b[0m\n\u001b[1;32m     20\u001b[0m reccomendation \u001b[38;5;241m=\u001b[39m output[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mchoices\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;241m0\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmessage\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcontent\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m     21\u001b[0m \u001b[38;5;28mprint\u001b[39m(reccomendation)\n\u001b[0;32m---> 22\u001b[0m bullet_points \u001b[38;5;241m=\u001b[39m \u001b[43mreccomendation\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msplit\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;130;43;01m\\n\u001b[39;49;00m\u001b[38;5;130;43;01m\\n\u001b[39;49;00m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m'\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m'\u001b[39m)[\u001b[38;5;241m0\u001b[39m:]\n\u001b[1;32m     23\u001b[0m playlist_titles \u001b[38;5;241m=\u001b[39m [point[\u001b[38;5;241m2\u001b[39m:] \u001b[38;5;28;01mfor\u001b[39;00m point \u001b[38;5;129;01min\u001b[39;00m bullet_points]\n\u001b[1;32m     24\u001b[0m best_title \u001b[38;5;241m=\u001b[39m playlist_titles[\u001b[38;5;241m0\u001b[39m]\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
      ]
     }
    ],
    "source": [
     "# VARIABLES TO CHANGE\n",
     "#settings tester\n",
-    "settings = [{\"Name\": \"danceability\", \"On\": True, \"Level\": 1},\n",
-    "            {\"Name\": \"energy\", \"On\": True,\"Level\": 1},\n",
-    "            {\"Name\": \"valence\", \"On\": True,\"Level\": 0},\n",
-    "            {\"Name\": \"loudness\",\"On\": False, \"Level\": 1},\n",
-    "            {\"Name\": \"instrumentalness\",\"On\": False, \"Level\": -1},\n",
-    "            {\"Name\": \"liveness\", \"On\": True,\"Level\": 1}]\n",
+    "settings = [{'Name': 'danceability', 'On': True, 'Level': 71}, {'Name': 'energy', 'On': True, 'Level': 69}, {'Name': 'valence', 'On': True, 'Level': 65}, {'Name': 'instrumentalness', 'On': False, 'Level': 0}, {'Name': 'tempo', 'On': False, 'Level': 0}]\n",
     "\n",
     "settings_df = pd.DataFrame(settings)\n",
     "\n",
     "goal = 20\n",
-    "generes_list = [\"indie-pop\",\"dancehall\"]\n",
+    "generes_list = ['indie', 'indie-Pop', 'pop']\n",
     "sp = get_logged_in()\n",
     "titles, i = generate_playlist(sp,generes_list,settings_df, goal)"
    ]
@@ -228,7 +225,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('base')",
+   "display_name": "Python 3.10.9 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -242,12 +239,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "74a37a82a1045f722fa39b5e25843ead82fe26f95a8a3d59b6a29879869666f7"
+    "hash": "634e6a8ceea6341882dc620c51101aad83b46ef46e858e3fa8c5406bdfcf8b2b"
    }
   }
  },
