--- a/notebooks/14.0-error-fixing.ipynb
+++ b/notebooks/14.0-error-fixing.ipynb
@@ -1392,6 +1392,145 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Fixing the Sliders \n",
+    "Delete duplicates and increase accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import spotipy\n",
+    "from spotipy.oauth2 import SpotifyOAuth\n",
+    "import pandas as pd\n",
+    "import argparse\n",
+    "import logging\n",
+    "import spotipy\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import requests\n",
+    "from spotipy import oauth2\n",
+    "import re\n",
+    "\n",
+    "import credentials"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/pz/lc5f5cgd1m5_ghmjddlz8r600000gn/T/ipykernel_48572/3544539949.py:7: DeprecationWarning: You're using 'as_dict = True'.get_access_token will return the token string directly in future versions. Please adjust your code accordingly, or use get_cached_token instead.\n",
+      "  token = sp_oauth.get_access_token(code)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Gain access to mainupation\n",
+    "SCOPE = ('user-read-recently-played,user-top-read,user-library-read,user-read-currently-playing,playlist-read-private,playlist-modify-private,playlist-modify-public,user-read-email,user-modify-playback-state,user-read-private,user-read-playback-state')\n",
+    "sp_oauth = oauth2.SpotifyOAuth(credentials.SPOTIPY_CLIENT_ID,credentials.SPOTIPY_CLIENT_SECRET, credentials.SPOTIPY_REDIRECT_URI ,scope=SCOPE )\n",
+    "\n",
+    "#click \"Accept\" in your browser when the auth window pops up\n",
+    "code = sp_oauth.get_auth_response(open_browser=True)\n",
+    "token = sp_oauth.get_access_token(code)\n",
+    "refresh_token = token['refresh_token']\n",
+    "sp = spotipy.Spotify(auth=token['access_token'])\n",
+    "username = sp.current_user()['id']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ranges = ['short_term','medium_term','long_term']\n",
+    "\n",
+    "top_tracks = []\n",
+    "\n",
+    "for sp_range in ranges:\n",
+    "    offset = 0\n",
+    "    while offset < 27:\n",
+    "        results = sp.current_user_top_tracks(time_range=sp_range, limit=50, offset = offset)\n",
+    "        for i in range(len(results)):\n",
+    "            top_tracks.append(results['items'][i]['uri'])\n",
+    "        offset += 7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "84"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(top_tracks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "audio_features = sp.audio_features(top_tracks)\n",
+    "df = pd.DataFrame(audio_features)\n",
+    "songs = {'danceability': [df.loc[df['danceability'].idxmin(), 'uri'], df.loc[df['danceability'].idxmax(), 'uri']], \n",
+    "      'energy': [df.loc[df['energy'].idxmin(), 'uri'], df.loc[df['energy'].idxmax(), 'uri']], \n",
+    "        'valence': [df.loc[df['valence'].idxmin(), 'uri'], df.loc[df['valence'].idxmax(), 'uri']],\n",
+    "        'instrumentalness': [df.loc[df['instrumentalness'].idxmin(), 'uri'], df.loc[df['instrumentalness'].idxmax(), 'uri']],\n",
+    "        'tempo': [df.loc[df['tempo'].idxmin(), 'uri'], df.loc[df['tempo'].idxmax(), 'uri']]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'danceability': ['spotify:track:3FTtVJjqOSaDlM4FByo0RK',\n",
+       "  'spotify:track:2psZizXNvyhfd3PdhfUaYF'],\n",
+       " 'energy': ['spotify:track:2bif1HTYdTVgp2x29YKXmU',\n",
+       "  'spotify:track:44Ljlpy44mHvLJxcYUvTK0'],\n",
+       " 'valence': ['spotify:track:3OFAd3QrT4Ftb70SnqeHFO',\n",
+       "  'spotify:track:7HQjy1O5WUmq9bcRTCl8H3'],\n",
+       " 'instrumentalness': ['spotify:track:69ZzhvHnSSnzMO8SMYEJWb',\n",
+       "  'spotify:track:3OFAd3QrT4Ftb70SnqeHFO'],\n",
+       " 'tempo': ['spotify:track:2bif1HTYdTVgp2x29YKXmU',\n",
+       "  'spotify:track:32iNr3J93tqFkxaMYwdRYi']}"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "songs"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1401,7 +1540,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('base')",
+   "display_name": "Python 3.10.9 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -1415,12 +1554,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "74a37a82a1045f722fa39b5e25843ead82fe26f95a8a3d59b6a29879869666f7"
+    "hash": "634e6a8ceea6341882dc620c51101aad83b46ef46e858e3fa8c5406bdfcf8b2b"
    }
   }
  },
