--- a/notebooks/13.3-combining-everything.ipynb
+++ b/notebooks/13.3-combining-everything.ipynb
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -176,29 +176,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Based on the songs in your playlist, here are a few playlist title suggestions:\n",
-      "1. Dance Pop Hits\n",
-      "2. Alternative Fireworks\n",
-      "3. Retro Electro Vibes\n",
-      "4. Saturday Night Jam\n",
-      "5. Indie Dance Party\n",
-      "6. Variety Mix Tape\n",
-      "7. Electronic Rhythms\n",
-      "8. Poolside Anthems\n",
-      "9. 80s Era Love\n",
-      "10. Electric Pop Soundtrack\n"
+      "Here are four suggestions for playlist titles based on the songs you provided:\n",
+      "1. Eclectic Ensemble\n",
+      "2. Pop Meets Hip-Hop\n",
+      "3. Feel-Good Vibes\n",
+      "4. Jukebox Jams\n",
+      "[' Eclectic Ensemble', ' Pop Meets Hip-Hop', ' Feel-Good Vibes', ' Jukebox Jams']\n"
      ]
     },
     {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[11], line 10\u001b[0m\n\u001b[1;32m      8\u001b[0m generes_list \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mindie\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mindie-Pop\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpop\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m      9\u001b[0m sp \u001b[38;5;241m=\u001b[39m get_logged_in()\n\u001b[0;32m---> 10\u001b[0m titles, i \u001b[38;5;241m=\u001b[39m \u001b[43mgenerate_playlist\u001b[49m\u001b[43m(\u001b[49m\u001b[43msp\u001b[49m\u001b[43m,\u001b[49m\u001b[43mgeneres_list\u001b[49m\u001b[43m,\u001b[49m\u001b[43msettings_df\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgoal\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[10], line 22\u001b[0m, in \u001b[0;36mgenerate_playlist\u001b[0;34m(sp, generes_list, settings_df, goal)\u001b[0m\n\u001b[1;32m     20\u001b[0m reccomendation \u001b[38;5;241m=\u001b[39m output[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mchoices\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;241m0\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmessage\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcontent\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m     21\u001b[0m \u001b[38;5;28mprint\u001b[39m(reccomendation)\n\u001b[0;32m---> 22\u001b[0m bullet_points \u001b[38;5;241m=\u001b[39m \u001b[43mreccomendation\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msplit\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;130;43;01m\\n\u001b[39;49;00m\u001b[38;5;130;43;01m\\n\u001b[39;49;00m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m'\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m'\u001b[39m)[\u001b[38;5;241m0\u001b[39m:]\n\u001b[1;32m     23\u001b[0m playlist_titles \u001b[38;5;241m=\u001b[39m [point[\u001b[38;5;241m2\u001b[39m:] \u001b[38;5;28;01mfor\u001b[39;00m point \u001b[38;5;129;01min\u001b[39;00m bullet_points]\n\u001b[1;32m     24\u001b[0m best_title \u001b[38;5;241m=\u001b[39m playlist_titles[\u001b[38;5;241m0\u001b[39m]\n",
-      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "DEBUG:spotipy.client:Sending POST to https://api.spotify.com/v1/playlists/6CklFP1dgZkKXOsxUeKHCy/tracks with Params: {'position': None} Headers: {'Authorization': 'Bearer BQDbH6DHgQqieBhKXR3m-rBO1Vp5m4aZXfKDbBT3KFWUlxPcPDdQr5ppIJ0GzmdHutpfIvrvpw-WwZwMwpsQaU91-IfnPqblXHhe8N3jCXL5QEjlE5abFnH3Q-PZmtlPq83KGNEMp1Kbc9xIVUYeeIYL7Ryy3nbo2qpGt8X-RS2zI9YWDDHxwMtGqv_Lec2-GnbiuHLruPJErjur7UJOmi5LIYz3BgwOGouf1zkq1E5xaNWcFPdrAkbT8FW6A8NmHMIhyiZJBoWuGmHnsiLOuw', 'Content-Type': 'application/json'} and Body: '[\"spotify:track:5mpLcXEsk3jjzLFGuNKk5I\", \"spotify:track:3u0qM9FSgL3zXi1Vn75b0i\", \"spotify:track:2Zj4FUsMtu9PMuJsHbGbdv\", \"spotify:track:3wUX7HpXS382s1DHTRouVk\", \"spotify:track:3NeiYiBn3rQBgurfVk92Zm\", \"spotify:track:6zQyu8L8yUuJkl6LbQ6iKU\", \"spotify:track:0fgZUSa7D7aVvv3GfO0A1n\", \"spotify:track:6jizk5lOUnfpaZXYMdfeC6\", \"spotify:track:71RPveF6c3dgG4tiljQw9K\", \"spotify:track:2bJvI42r8EF3wxjOuDav4r\", \"spotify:track:1f5cbQtDrykjarZVrShaDI\", \"spotify:track:5fbR5XxBRLGMue3QKtDgF3\", \"spotify:track:0ljEFYEFuqspdPCWn75FPP\", \"spotify:track:0S5VcAlmDYhEQmeSkkQHNM\", \"spotify:track:5mpLcXEsk3jjzLFGuNKk5I\", \"spotify:track:5WSdMcWTKRdN1QYVJHJWxz\", \"spotify:track:4VbDJMkAX3dWNBdn3KH6Wx\", \"spotify:track:2bJvI42r8EF3wxjOuDav4r\", \"spotify:track:7iNIg7XDEaYECfWD5dJ9Va\", \"spotify:track:5ChkMS8OtdzJeqyybCc9R5\", \"spotify:track:0fgZUSa7D7aVvv3GfO0A1n\", \"spotify:track:6p8NuHm8uCGnn2Dtbtf7zE\", \"spotify:track:0Gpq0lllEPZf98gVo9C4uS\", \"spotify:track:2n5gVJ9fzeX2SSWlLQuyS9\", \"spotify:track:17JYzDCW1UTndfURuTydF2\", \"spotify:track:6YZdkObH88npeKrrkb8Ggf\", \"spotify:track:3u1S1OmAUhx5DRlLrXqyp3\"]' \n",
+      "DEBUG:urllib3.connectionpool:https://api.spotify.com:443 \"POST /v1/playlists/6CklFP1dgZkKXOsxUeKHCy/tracks HTTP/1.1\" 201 None\n",
+      "DEBUG:spotipy.client:RESULTS: {'snapshot_id': 'Myw5NzVhOWQ5MjU1MDI2MmFhMDZjZTUwOTgxZThjMDdjNGVjNjFkNGZh'}\n"
      ]
     }
    ],
